<resources>
    <string name="app_name">go购够</string>
    <string name="string_get_verify_code">点击获取</string>
    <string name="string_code_title">验证码：</string>
    <string name="string_code_hint">验证码</string>
    <string name="string_register_activity_1">请您输入手机号码</string>
    <string name="string_register_activity_2">手机号：</string>
    <string name="string_register_activity_3">请您设置密码</string>
    <string name="string_register_activity_4">密码：</string>
    <string name="string_register_activity_5">下一步</string>
    <string name="string_register_activity_6"><![CDATA[已有账号？点击登录>>]]></string>
    <string name="string_to_open">去打开</string>
    <string name="string_manage_phone_permission">您必须授予管理电话的权限才能正常使用App</string>
    <string name="string_location_permission_hint">您必须授予定位权限才能正常使用App</string>
    <string name="string_write_sd_card">您必须授予存储卡的读写权限才能正常使用App</string>
    <string name="string_album">相册</string>
    <string name="string_take_photo">拍照</string>
    <string name="string_sd_card_not_found">没有找到存储卡</string>
    <string name="title_login_activity">欢迎登录</string>
    <string name="hint_input_username_and_pwd_first">请先输入用户名或密码</string>
    <string name="hint_login_ing">登录中……</string>
    <string name="string_login_success">登录成功</string>
    <string name="hint_skip">跳过</string>
    <string name="title_complete">完善资料</string>
    <string name="hint_take_1_minute_to_complete">花1分钟完善一下资料吧~</string>
    <string name="hint_camera_permission_first">你必须允许使用相机才能拍照哦~</string>
    <string name="text_to_open">去开启</string>
    <string name="string_get_image_error">图片读取失败！</string>
    <string name="string_to_choose">请选择</string>
    <string name="string_male">男</string>
    <string name="string_female">女</string>
    <string name="string_main_tab">首页</string>
    <string name="string_task_tab">任务</string>
    <string name="string_tab_news">消息</string>
    <string name="string_mine_tab">我的</string>
    <string name="string_tab_send_task">工具箱</string>
    <string name="back_press_tips">再按一次退出</string>
</resources>
