<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">


    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/date_pick_white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <cn.woyeshi.base.views.InputLayoutView
                        android:id="@+id/inputLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/string_register_activity_1"
                        app:inputType="number"
                        app:maxLength="11"
                        app:title="@string/string_register_activity_2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/line_color" />

                    <cn.woyeshi.base.views.InputLayoutView
                        android:id="@+id/inputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/string_register_activity_3"
                        app:inputType="password"
                        app:maxLength="16"
                        app:title="@string/string_register_activity_4" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/line_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <cn.woyeshi.base.views.InputLayoutView
                            android:id="@+id/inputLayout3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:hint="@string/string_code_hint"
                            app:inputType="number"
                            app:maxLength="4"
                            app:title="@string/string_code_title" />

                        <TextView
                            android:id="@+id/btnGetVerifyCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_chat_round_btn_yellow_gray_bg"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/string_get_verify_code"
                            android:textColor="@drawable/selector_btn_text_color_white_gray"
                            android:textSize="@dimen/text_size_t3" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/line_color" />


                    <TextView
                        android:id="@+id/btnNext"
                        android:layout_width="140dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="13dp"
                        android:background="@drawable/selector_chat_round_btn_yellow_gray_bg"
                        android:clickable="true"
                        android:enabled="false"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/string_register_activity_5"
                        android:textColor="@drawable/selector_btn_text_color_white_gray" />

                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="11dp"
                        android:background="@drawable/selector_bg_trans_gray"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="@string/string_register_activity_6"
                        android:textColor="@color/n_gray_2"
                        android:textSize="@dimen/text_size_t3" />


                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>